@@ -15,6 +15,8 @@
 	(epackage-devel-generate-compile-main): Correct arg DIR handling.
 	(epackage-devel-generate-uninstall): Correct arg DIR handling.
 	(epackage-error-if-not-directory): New.
+	(epackage-devel-compose-package-dir): Always select some *.el
+	file for epackage/info base.
 
 2012-01-03 Wed  Jari Aalto  <jari.aalto@cante.net>
 
